--- a/innovate-web/src/main/webapp/pages/login.html
+++ b/innovate-web/src/main/webapp/pages/login.html
@@ -59,7 +59,7 @@
           <div class="layui-form layui-form-pane">
             <div id="app">
               <div class="layui-form-item">
-                <label for="L_email" class="layui-form-label">邮箱</label>
+                <label for="L_email" class="layui-form-label">用户名</label>
                 <div class="layui-input-inline">
                   <input v-model="username" type="text" id="L_email" name="email" required lay-verify="required" autocomplete="off" class="layui-input">
                 </div>
