--- a/innovate-web/src/main/webapp/pages/myRegist.html
+++ b/innovate-web/src/main/webapp/pages/myRegist.html
@@ -17,7 +17,7 @@
         <h1 class="logo pull-left">
             <a href="index.html">
                 <img src="/static/img/logo.png" alt="" class="logo-img">
-                <img src="/static/img/logo-text.png" alt="" class="logo-text">
+                <img src="/static/img/log.png" width="75px" height="36" alt="" class="logo-text">
             </a>
         </h1>
         <form class="layui-form blog-seach pull-left" action="">
