--- a/innovate-web/src/main/webapp/pages/user.html
+++ b/innovate-web/src/main/webapp/pages/user.html
@@ -44,7 +44,7 @@
         <h1 class="logo pull-left">
             <a href="index.html">
                 <img src="/static/img/logo.png" alt="" class="logo-img">
-                <img src="/static/img/logo-text.png" alt="" class="logo-text">
+                <img src="/static/img/log.png" width="75px" height="36" alt="" class="logo-text">
             </a>
         </h1>
         <form class="layui-form blog-seach pull-left" action="">
@@ -100,7 +100,7 @@
                     <a style="margin-bottom: 30px; margin-top: 20px" href="javascript:;" class="file">
                         替换头像
                         <i class="layui-icon">&#xe67c;</i>
-                        <input type="file" name="" id="">
+                        <input type="file" name="" @change="getFile($event)">
                     </a>
                 </div>
             </div>
@@ -154,6 +154,7 @@
 <script src="/static/js/bootstrap.min.js"
         integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
         crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/vue-resource@1.5.1"></script>
 <script>
     var app = new Vue({
         el: "#app",
@@ -216,6 +217,22 @@
                         } else {
                             alert(response.data.errorMessage);
                         }
+                    })
+            },
+            upload(){
+                alert("sad");
+            },
+            getFile(event) {
+                let file = event.target.files[0];
+                let param = new FormData(); //创建form对象
+                param.append('file',file);//通过append向form对象添加数据
+                console.log(param.get('file')); //FormData私有类对象，访问不到，可以通过get判断值是否传进去
+                let config = {
+                    headers:{'Content-Type':'multipart/form-data'}
+                }; //添加请求头
+                this.$http.post('/user/updateHeadPictrue',param,config)
+                    .then(response=> {
+                        console.log(response.data);
                     })
             }
         }
